terraform/security-groups.tf
resource "aws_security_group" "eks_nodes" {

  name = "${var.project_name}-${var.environment}-eks-nodes"

  description = "Security group for EKS worker nodes"

  vpc_id = aws_vpc.main.id

  ingress {

    from_port = 443

    to_port = 443

    protocol = "tcp"

    cidr_blocks = [
      "10.0.0.0/16"
    ]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]

  }

  tags = {

    Name = "${var.project_name}-${var.environment}-eks-nodes"

  }

}
